tests/expected_output/unistd_compile_error/000000-clang-14.0-x86_64-pc-linux-gnu.txt
unistd_compile_error.c:7:6: error: redefinition of 'read'
void read(void) {
     ^
